Mon Feb  1 16:43:09 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (proc_invoke): reverted r25975.  [ruby-dev:39931]
	  [ruby-dev:40059]

	* eval.c (rb_mod_define_method): return original block but not
	  bound block.  [ruby-core:26984]

Mon Feb  1 07:36:33 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/tkutil/tkutil.c: fix SEGV on TkUtil::CallbackSubst._setup_subst_table.

	* ext/tk/lib/tk.rb: [POTENTIAL INCOMPATIBLE] return NoMethodError
	  for TkWindow#to_ary and to_str.

	* ext/tk/lib/tkextlib/tcllib/plotchart.rb: wrong arguments.

	* ext/tk/sampel/tkballoonhelp.rb: fail to support TkEntry widgets.

Wed Jan 27 14:25:12 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (thread_init): used only for setitimer or threaded.

	* ext/dl/dl.c (c_parray): get rid of a deprecated function.

	* ext/dl/handle.c (rb_dlhandle_sym): conditionally used variable.

Wed Jan 27 14:05:46 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c, eval.c, process.c: add __APPLE__ to r26371's condition.
	  patched by Wataru Kimura [ruby-dev:40145]

Tue Jan 26 20:24:04 2010  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/eq.rb: fix circular requrie in drb.
	  reported by akr. see [ruby-dev:40156] [ruby-core:27661]

Tue Jan 26 20:13:27 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/zlib/zlib.c (rb_gzfile_s_wrap): add rdoc.
	  patched by Hugh Sasse [ruby-core:27692]

	* ext/zlib/doc/zlib.rd: removed.

Tue Jan 26 02:25:46 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_split): add rdoc.
	  patched by Hugh Sasse [ruby-core:27819]

Mon Jan 25 23:24:26 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* test/ruby/test_string.rb (test_split): add tests.
	  patched by Hugh Sasse [ruby-core:27794]

Fri Jan 22 01:22:27 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* eval.c (thread_timer, rb_thread_stop_timer): check the timing of
	  stopping timer.  patch from KOSAKI Motohiro <kosaki.motohiro _AT_
	  jp.fujitsu.com> via IRC.
