@@ -1,3 +1,8 @@
+Wed Feb  3 21:14:59 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/net/http.rb (Net::HTTP#request): close @socket only after
+	  started.  [ruby-core:28028]
+
 Mon Feb  1 16:43:09 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* eval.c (proc_invoke): reverted r25975.  [ruby-dev:39931]
